[package]
name = "websocket-filter-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.28"
futures-util = "0.3"
rustls = { version = "0.23", features = ["ring"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
url = "2"
